style.css
:root {
  font-family: "Roboto", sans-serif;
  --clr-primary-400: rgb(207, 219, 215);
  --clr-primary-500: rgb(107, 107, 107);
  --clr-primary-800: rgb(0, 0, 0);

  --clr-alt-100: rgb(28, 207, 148);
  --clr-alt-700: rgb(56, 112, 196);

  --clr-light: rgb(255, 255, 255);
  --clr-dark: ;

  --box-shadow: 2px 4px 4px 2px rgba(109, 119, 116, 0.2);

  --fw-semi-bold: 500;
  --fw-bold: 600;

  --fs-200: 0.4rem;
  --fs-300: 0.6rem;
  --fs-400: 0.75rem;
  --fs-500: 1rem;
  --fs-600: 1.3rem;
  --fs-700: 1.5rem;
  --fs-800: 2rem;
}

html,
body {
  height: 100%;
  width: 100%;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

* {
  margin: 0;
  padding: 0;
}

a {
  text-decoration: none;
}

svg {
  height: 1.5rem;
}

img {
  height: 60px;
  width: 60px;
  object-fit: cover;
  border-radius: 100%;
  display: inline;
}

img.main-pic {
  height: 90px;
  width: 90px;
}

.site-layout {
  height: 100%;
  display: grid;
  grid-template-rows: 15% auto;
  grid-template-columns: min(20%, 400px) auto;
}

.alt-clr {
  background-color: var(--clr-alt-100);
  fill: var(--clr-light);
}
.alt-clr * {
  color: var(--clr-light);
}

.flex {
  display: flex;
  gap: 1.5rem;
}

.flex-col {
  flex-direction: column;
}

span {
  font-weight: var(--fw-semi-bold);
}

.content,
.sidebar {
  padding: 1rem 1.2rem;
}

.sidebar {
  grid-row: 1 / -1;
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

.logo {
  font-size: var(--fs-800);
  font-weight: var(--fw-semi-bold);
}

.button-container {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
}

.page-button {
  font-size: var(--fs-600);
}

.page-button > a {
  display: grid;
  grid-template-columns: 1.5rem auto;
  gap: 1.2rem;
  align-items: center;
  font-weight: var(--fw-bold);
}

.header {
  padding: 1rem 2.25rem;
  display: grid;
  grid-template-rows: 1fr 5fr;
  font-weight: var(--fw-semi-bold);
}

.nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 6rem;
}

#search-container {
  display: flex;
  gap: 1.2rem;
  flex: 1 1 180px;
  align-items: center;
}

#search {
  border-radius: 20px;
  padding: 0.5rem;
  width: min(600px, 100%);
}

#profile-container {
  display: flex;
  gap: 1.2rem;
  align-items: center;
}

.user-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#greeting {
  letter-spacing: 1px;
  gap: 0.25rem;
}

.container {
  display: flex;
  justify-content: space-between;
  gap: 1.5rem;
}

.user-button {
  width: 100px;
  text-align: center;
  padding: 0.5rem 1rem;
  border-radius: 20px;
}

h1 {
  font-size: var(--fs-700);
  font-weight: var(--fw-bold);
}

.content {
  background-color: var(--clr-primary-400);
  display: grid;
  grid-template-columns: 3fr 1fr;
  grid-auto-rows: min-content;
  gap: 1rem;
  padding: 2rem 1rem;
}

.content-header {
  padding-bottom: 1rem;
}

.project-container {
  grid-row: 1/ 3;
}

.card-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-auto-rows: 300px;
  gap: 1.5rem;
}

.card {
  display: flex;
  flex-direction: column;
  background-color: var(--clr-light);
  padding: 1.5rem 2rem;
  border-radius: 10px;
  border-left: 10px solid var(--clr-alt-700);
  box-shadow: var(--box-shadow);
}

.card > article {
  flex: 1;
}

.icon-container {
  align-self: end;
  display: flex;
  gap: 1.5rem;
}

.announcement {
  display: flex;
  flex-direction: column;
}

.announcement-container {
  display: flex;
  flex-direction: column;
  background-color: var(--clr-light);
  border-radius: 10px;
  padding: 0 2rem;
  box-shadow: var(--box-shadow);
}

.announcement-container > a {
  padding: 1.5rem 0;
}

.announcement-container > a:not(:last-child) {
  border-bottom: 2px solid var(--clr-primary-400);
}

.announcement-container p {
  overflow: hidden;
  text-overflow: ellipsis;
  display: -webkit-box;
  -webkit-line-clamp: 3;
  -webkit-box-orient: vertical;
}

p {
  color: var(--clr-primary-500);
  margin-top: 0.5rem;
}

.profile-container {
  display: grid;
  grid-auto-rows: 60px;
  gap: 1.5rem;
  background-color: var(--clr-light);
  border-radius: 10px;
  padding: 1.5rem 1.5rem;
  box-shadow: var(--box-shadow);
}

.profile {
  display: flex;
  gap: 1.5rem;
}

.profile > div {
  display: flex;
  flex-direction: column;
}

